[gd_scene load_steps=6 format=3 uid="uid://bcqacic7yj4ds"]

[ext_resource type="FontFile" uid="uid://dclfn1fjcq5i7" path="res://Fonts/PressStart2P-Regular.ttf" id="1_4l55f"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_bwdok"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aujmq"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bf8k5"]
bg_color = Color(0.972549, 0.321569, 0.580392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hvoe"]
bg_color = Color(1, 0, 0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwdok")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
offset_top = -2.0
offset_right = 636.0
offset_bottom = 89.0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 64
text = "SCORE"

[node name="Label" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -478.0
offset_top = -240.0
offset_right = 482.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("1_4l55f")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Label2" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -478.0
offset_top = -240.0
offset_right = 482.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 2

[node name="HighScore" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 91.0
grow_horizontal = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 64
text = "HIGH SCORE
0"
horizontal_alignment = 1

[node name="EnemiesLeft" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -452.0
offset_bottom = 134.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 64
text = "TIME"
horizontal_alignment = 2

[node name="PowerUpContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0

[node name="SPEED UP" type="VBoxContainer" parent="CanvasLayer/PowerUpContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PowerUpContainer/SPEED UP"]
z_index = 1
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 32
text = "SPEED-UP
"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PowerUpContainer/SPEED UP/Label"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_aujmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_bf8k5")
value = 50.0
show_percentage = false

[node name="FAST SPRAY" type="VBoxContainer" parent="CanvasLayer/PowerUpContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/PowerUpContainer/FAST SPRAY"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 32
text = "FAST SPRAY"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PowerUpContainer/FAST SPRAY/Label"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_aujmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_bf8k5")
value = 50.0
show_percentage = false

[node name="BIG SPRAY" type="VBoxContainer" parent="CanvasLayer/PowerUpContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/PowerUpContainer/BIG SPRAY"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 32
text = "BIG SPRAY"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PowerUpContainer/BIG SPRAY/Label"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_aujmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_bf8k5")
value = 50.0
show_percentage = false

[node name="SCATTER SPRAY" type="VBoxContainer" parent="CanvasLayer/PowerUpContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/PowerUpContainer/SCATTER SPRAY"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 32
text = "SCATTER SPRAY"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PowerUpContainer/SCATTER SPRAY/Label"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_aujmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_bf8k5")
value = 50.0
show_percentage = false

[node name="GRENADE" type="VBoxContainer" parent="CanvasLayer/PowerUpContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/PowerUpContainer/GRENADE"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 32
text = "GRENADE"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PowerUpContainer/GRENADE/Label"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_aujmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_bf8k5")
value = 50.0
show_percentage = false

[node name="MINI SHARK" type="VBoxContainer" parent="CanvasLayer/PowerUpContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/PowerUpContainer/MINI SHARK"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 32
text = "MINI SHARK"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PowerUpContainer/MINI SHARK/Label"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_aujmq")
theme_override_styles/fill = SubResource("StyleBoxFlat_bf8k5")
value = 50.0
show_percentage = false

[node name="UpgradeChoiceContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 238.0
offset_top = -20.0
offset_right = -250.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Choice1" type="VBoxContainer" parent="CanvasLayer/UpgradeChoiceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UpgradeChoiceContainer/Choice1"]
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/UpgradeChoiceContainer/Choice1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 48
text = "Dummy description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="CanvasLayer/UpgradeChoiceContainer/Choice1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 36
text = "Dummy description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/UpgradeChoiceContainer/Choice1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 48
text = "SELECT"

[node name="Choice2" type="VBoxContainer" parent="CanvasLayer/UpgradeChoiceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UpgradeChoiceContainer/Choice2"]
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/UpgradeChoiceContainer/Choice2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 48
text = "Dummy description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="CanvasLayer/UpgradeChoiceContainer/Choice2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 36
text = "Dummy description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/UpgradeChoiceContainer/Choice2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 48
text = "  SELECT  "

[node name="Choice3" type="VBoxContainer" parent="CanvasLayer/UpgradeChoiceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UpgradeChoiceContainer/Choice3"]
layout_mode = 2
size_flags_horizontal = 4
stretch_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/UpgradeChoiceContainer/Choice3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 48
text = "Dummy description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="CanvasLayer/UpgradeChoiceContainer/Choice3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 36
text = "Dummy description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/UpgradeChoiceContainer/Choice3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 48
text = "  SELECT  "

[node name="UpgradeSummary" type="Label" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = 341.0
offset_right = 658.0
offset_bottom = 714.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4l55f")
theme_override_font_sizes/font_size = 32
vertical_alignment = 2

[node name="DamageRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0, 0, 0.686275)

[node name="BossHealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 1061.0
offset_top = 170.0
offset_right = 1484.0
offset_bottom = 231.0
theme_override_styles/fill = SubResource("StyleBoxFlat_7hvoe")
value = 50.0
show_percentage = false

[connection signal="pressed" from="CanvasLayer/UpgradeChoiceContainer/Choice1/Button" to="." method="_on_upgrade_button_pressed" binds= [1]]
[connection signal="pressed" from="CanvasLayer/UpgradeChoiceContainer/Choice2/Button" to="." method="_on_upgrade_button_pressed" binds= [2]]
[connection signal="pressed" from="CanvasLayer/UpgradeChoiceContainer/Choice3/Button" to="." method="_on_upgrade_button_pressed" binds= [3]]
